Update Car Listings on eBay.ipynb

--- a/Car Listings on eBay.ipynb
+++ b/Car Listings on eBay.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this guided project, we'll work with a dataset of used cars from eBay Kleinanzeigen, a classifieds section of the German eBay website."
+    "In this project, I've worked with a dataset of used cars from eBay Kleinanzeigen, a classifieds section of the German eBay website."
    ]
   },
   {
